buyer refarral history oder history page done

--- a/buyer-booking-confirmation.html
+++ b/buyer-booking-confirmation.html
@@ -21,9 +21,9 @@
                         </div>
                     </div>
                     <h2 class="title text-[3.375rem] text-[#1F3650] text-center">Booking Confirmed</h2>
-                    <p class="booking_schedual text-center text-[#666562]">Your live shopping session with Timothy is successfully booked for <span class="text-[#1F3650] font-[700]">Fri, 6 September at 2:00 PM. </span>
+                    <p class="booking_schedual text-center text-color11">Your live shopping session with Timothy is successfully booked for <span class="text-[#1F3650] font-[700]">Fri, 6 September at 2:00 PM. </span>
                     </p>
-                    <p class="booking_confirm text-center text-[#666562] mt-[20px]">A confirmation has been sent, and we'll remind you before the session. Feel free to contact the seller if you have any questions!</span>
+                    <p class="booking_confirm text-center text-color11 mt-[20px]">A confirmation has been sent, and we'll remind you before the session. Feel free to contact the seller if you have any questions!</span>
                     </p>
                     <div class="btn_wraper mt-[22px]">
                         <a href="javaascript:void(0)" class="text-center w-full bg-color4 uppercase text-[#000000] leading-[2] p-[12px] ">Continue</a>
