--- a/buyer-order-processing.html
+++ b/buyer-order-processing.html
@@ -21,7 +21,7 @@
                         </svg>
                     </div>
                     <h2 class="title text-[#1F3650] text-[3.375rem] leading-[3rem] text-center">Your order’s being processed.</h2>
-                    <p class="text-[#666562] tracking-[1px] mt-[20px] text-center">If you’re not automatically redirected, refresh this page.</p>
+                    <p class="text-color11 tracking-[1px] mt-[20px] text-center">If you’re not automatically redirected, refresh this page.</p>
                 </div>
             </div>
         </div>
