--- a/buyer-shop-grid.html
+++ b/buyer-shop-grid.html
@@ -226,25 +226,25 @@
                             <div class="item_menu_list">
                                 <ul class="pt-[16px] flex flex-col gap-[12px]">
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
                                     </li>
                                 </ul>
                             </div>
@@ -254,25 +254,25 @@
                             <div class="item_menu_list">
                                 <ul class="pt-[16px] flex flex-col gap-[12px]">
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
                                     </li>
                                 </ul>
                             </div>
@@ -282,25 +282,25 @@
                             <div class="item_menu_list">
                                 <ul class="pt-[16px] flex flex-col gap-[12px]">
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
                                     </li>
                                 </ul>
                             </div>
@@ -310,25 +310,25 @@
                             <div class="item_menu_list">
                                 <ul class="pt-[16px] flex flex-col gap-[12px]">
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Dress</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tshirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Schirt</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Pants</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Tops</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Hoodies</a>
                                     </li>
                                     <li class="item_menu_list_item group">
-                                        <a href="javascript:void(0)" class="text-[#666562] font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
+                                        <a href="javascript:void(0)" class="text-color11 font-[600] text-[13px] leading-[19px] tracking-[1.5px] uppercase border-b-[1px] border-[transparent] group-[.active]:text-color5 group-[.active]:border-[#000000]">Accessories</a>
                                     </li>
                                 </ul>
                             </div>
