--- a/checkout-order-status.html
+++ b/checkout-order-status.html
@@ -22,7 +22,7 @@
                                 <i class="fa fa-check"></i>
                             </div>
                             <div class="text">
-                                <p class="text-[#666562] tracking-[1px]">Confirmation <span>#DQFDHG5E0</span></p>
+                                <p class="text-color11 tracking-[1px]">Confirmation <span>#DQFDHG5E0</span></p>
                                 <p class="text-[#1F3650] text-[1.125rem] leading-[1.5] font-[700] tracking-[1px]">Thank you John Smith!</p>
                             </div>
                         </div>
@@ -32,7 +32,7 @@
                             </div>
                             <div class="text_par p-[14px]">
                                 <h3 class="font-[700] text-[#1F3650] text-[1.125rem] tracking-[1px]">Your order is placed</h3>
-                                <p class="text-[#666562] tracking-[1px] my-[8px]">Your order #212423 was placed with success. You will receive the status of the order via email.</p>
+                                <p class="text-color11 tracking-[1px] my-[8px]">Your order #212423 was placed with success. You will receive the status of the order via email.</p>
                                 <div class="btn_wraper">
                                     <a href="javascript:void(0)" class="text-[#1F3650] leading-[1.5] tracking-[1px] uppercase px-[17px] py-[14px] rounded-[5px] border-[1px] border-[#CCCBC8]">View order history</a>
                                 </div>
@@ -45,44 +45,44 @@
                                     <div class="contact_info">
                                         <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Contact information</div>
                                         <div class="value flex flex-col gap-[10px]">
-                                            <p class="text-[#666562] tracking-[1px]">name@example.com</p>
+                                            <p class="text-color11 tracking-[1px]">name@example.com</p>
                                         </div>
                                     </div>
                                     <div class="payment_info">
                                         <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Payment method</div>
                                         <div class="value flex flex-col gap-[10px]">
-                                            <p class="text-[#666562] tracking-[1px] flex gap-[5px]"><span><img src="./assets/images/PaymentIcon.png" alt="card"></span><span>ending with 4242 - £336.80</span></p>
+                                            <p class="text-color11 tracking-[1px] flex gap-[5px]"><span><img src="./assets/images/PaymentIcon.png" alt="card"></span><span>ending with 4242 - £336.80</span></p>
                                         </div>
                                     </div>
                                     <div class="shipping_address">
                                         <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Shipping address</div>
                                         <div class="value flex flex-col gap-[10px]">
-                                            <p class="text-[#666562] tracking-[1px]">John Smith</p>
-                                            <p class="text-[#666562] tracking-[1px]">38 Chester Road</p>
-                                            <p class="text-[#666562] tracking-[1px]">London</p>
-                                            <p class="text-[#666562] tracking-[1px]">SW46 3TC</p>
+                                            <p class="text-color11 tracking-[1px]">John Smith</p>
+                                            <p class="text-color11 tracking-[1px]">38 Chester Road</p>
+                                            <p class="text-color11 tracking-[1px]">London</p>
+                                            <p class="text-color11 tracking-[1px]">SW46 3TC</p>
                                         </div>
                                     </div>
                                     <div class="shipping_address">
                                         <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Billing address</div>
                                         <div class="value flex flex-col gap-[10px]">
-                                            <p class="text-[#666562] tracking-[1px]">John Smith</p>
-                                            <p class="text-[#666562] tracking-[1px]">38 Chester Road</p>
-                                            <p class="text-[#666562] tracking-[1px]">London</p>
-                                            <p class="text-[#666562] tracking-[1px]">SW46 3TC</p>
+                                            <p class="text-color11 tracking-[1px]">John Smith</p>
+                                            <p class="text-color11 tracking-[1px]">38 Chester Road</p>
+                                            <p class="text-color11 tracking-[1px]">London</p>
+                                            <p class="text-color11 tracking-[1px]">SW46 3TC</p>
                                         </div>
                                     </div>
                                     <div class="shipping_method">
                                         <div class="title text-[#000000] font-[700] tracking-[1px] mb-[8px]">Shipping method</div>
                                         <div class="value flex flex-col gap-[10px]">
-                                            <p class="text-[#666562] tracking-[1px]">Same Day Delivery</p>
+                                            <p class="text-color11 tracking-[1px]">Same Day Delivery</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="save_information flex gap-[8px] items-center p-[14px] border-t-[1px] border-[#CCCBC8]">
                                 <input type="checkbox" name="save_information" id="save_information" class="custom-checkbox gray_border">
-                                <label for="save_information" class="text-[#666562] cursor-pointer">Save my information for a faster checkout</label>
+                                <label for="save_information" class="text-color11 cursor-pointer">Save my information for a faster checkout</label>
                             </div>
                         </div>
                         <div class="return_shipping mt-[34px]">
@@ -121,7 +121,7 @@
                         <div class="devider w-full h-[1px] bg-[#CCCBC8] my-[20px]"></div>
                         <div class="discount_part">
                             <div class="discount_code_wraper flex gap-[14px]">
-                                <input type="text" name="discount_code" id="discount_code" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] text-[#666562] placeholder:text-[#666562] mb-[14px]" placeholder="Discount Code">
+                                <input type="text" name="discount_code" id="discount_code" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] text-color11 placeholder:text-color11 mb-[14px]" placeholder="Discount Code">
                                 <div class="apply_btn">
                                     <a href="javascript:void(0)" class="px-[17px] py-[8px] text-[14px] leading-[2] tracking-[1.5px] uppercase rounded-[5px] bg-[#2d2d2d80] text-[#FFFFFD]">Apply</a>
                                 </div>
@@ -142,22 +142,22 @@
                                         </svg>
                                     </div>
                                     <div class="font-[600] uppercase text-[#1F3650] text-[13px] leading-[1.5] tracking-[1.5px]">SPRINGSALE</div>
-                                    <div class="close text-[#666562] text-[1rem] leading-[1] cursor-pointer"><i class="fa-solid fa-xmark"></i></div>
+                                    <div class="close text-color11 text-[1rem] leading-[1] cursor-pointer"><i class="fa-solid fa-xmark"></i></div>
                                 </div>
                             </div>
                         </div>
                         <div class="devider w-full h-[1px] bg-[#CCCBC8] my-[20px]"></div>
                         <div class="all_calculation_part flex flex-col gap-[12px]">
                             <div class="subtotal flex justify-between gap-[10px] items-center">
-                                <div class="title text-[#666562] tracking-[1px]">Subtotal</div>
+                                <div class="title text-color11 tracking-[1px]">Subtotal</div>
                                 <div class="ammount text-[#1F3650] font-[700]">£100.00</div>
                             </div>
                             <div class="shipping flex justify-between gap-[10px] items-center">
-                                <div class="title text-[#666562] tracking-[1px]">Shipping</div>
-                                <div class="ammount text-[#666562]">Calculated at next step</div>
+                                <div class="title text-color11 tracking-[1px]">Shipping</div>
+                                <div class="ammount text-color11">Calculated at next step</div>
                             </div>
                             <div class="subtotal flex justify-between gap-[10px] items-center">
-                                <div class="title flex gap-[9px] text-[#666562] tracking-[1px]">
+                                <div class="title flex gap-[9px] text-color11 tracking-[1px]">
                                     <span>Discount</span>
                                     <div class="discount_copun flex gap-[9px] items-center">
                                         <div class="icon">
@@ -173,20 +173,20 @@
                                                 </defs>
                                             </svg>
                                         </div>
-                                        <div class="font-[600] uppercase text-[#666562] text-[12px] leading-[1.5] tracking-[1.5px]">SPRINGSALE</div>
+                                        <div class="font-[600] uppercase text-color11 text-[12px] leading-[1.5] tracking-[1.5px]">SPRINGSALE</div>
                                     </div>
                                 </div>
                                 <div class="ammount text-[#1F3650] font-[700]">£10.00</div>
                             </div>
                             <div class="taxes flex justify-between gap-[10px] items-center">
-                                <div class="title text-[#666562] tracking-[1px]">Taxes</div>
+                                <div class="title text-color11 tracking-[1px]">Taxes</div>
                                 <div class="ammount text-[#1F3650] font-[700]">£5.00</div>
                             </div>
                             <div class="devider w-full h-[1px] bg-[#CCCBC8] my-[9px]"></div>
                             <div class="total_calculation flex justify-between gap-[10px] items-center">
                                 <div class="total text-[#1F3650] text-[1.125rem] leading-[1.5] font-[700]">Total</div>
                                 <div class="total_ammount flex items-center gap-[10px]">
-                                    <span class="currency text-[#666562]">GBP</span>
+                                    <span class="currency text-color11">GBP</span>
                                     <span class="ammount text-[#1F3650] text-[1.6rem] leading-[1.6]">£95.00</span>
                                 </div>
                             </div>
