--- a/dashboart-product-preview-page.html
+++ b/dashboart-product-preview-page.html
@@ -241,7 +241,7 @@
                                     </div>
                                     <div class="text-part-waper max-w-[412px] w-full mx-auto">
                                         <div class="top-text-part">
-                                            <ul class="bradecrumb flex gap-[10px] text-[10px] leading-[16px] text-[#666562] font-[300]">
+                                            <ul class="bradecrumb flex gap-[10px] text-[10px] leading-[16px] text-color11 font-[300]">
                                                 <li>
                                                     <a href="javascript:void(0)">Shop &nbsp; /</a>
                                                 </li>
