--- a/modals.html
+++ b/modals.html
@@ -27,17 +27,17 @@
                     <div class="buyer_home_address mt-[34px]">
                         <form action="#" class="flex flex-col gap-[14px]">
                             <div>
-                                <input type="text" class="address_line bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562]" placeholder="Address">
+                                <input type="text" class="address_line bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11" placeholder="Address">
                             </div>
                             <div>
-                                <select name="buyer_home_region" id="buyer_home_region" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562] custom-select2 style_3 before:content-['ddd']">
+                                <select name="buyer_home_region" id="buyer_home_region" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11 custom-select2 style_3 before:content-['ddd']">
                                     <option value="0">Region</option>
                                     <option value="1">Dhaka</option>
                                     <option value="2">Sylhet</option>
                                 </select>
                             </div>
                             <div>
-                                <select name="buyer_home_country" id="buyer_home_country" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562] custom-select2 style_3 before:content-['ddd']">
+                                <select name="buyer_home_country" id="buyer_home_country" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11 custom-select2 style_3 before:content-['ddd']">
                                     <option value="0">Country</option>
                                     <option value="1">Dhaka</option>
                                     <option value="2">Sylhet</option>
@@ -45,14 +45,14 @@
                             </div>
                             <div class="flex gap-[12px] flex-wrap">
                                 <div class="flex-[1_1_150px]">
-                                    <select name="buyer_home_city" id="buyer_home_city" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562] custom-select2 style_3 before:content-['ddd']">
+                                    <select name="buyer_home_city" id="buyer_home_city" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11 custom-select2 style_3 before:content-['ddd']">
                                         <option value="0">City</option>
                                         <option value="1">Dhaka</option>
                                         <option value="2">Sylhet</option>
                                     </select>
                                 </div>
                                 <div class="flex-[1_1_150px]">
-                                    <input type="text" class="buyer_home_postcode bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562]" placeholder="Postcode">                       
+                                    <input type="text" class="buyer_home_postcode bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11" placeholder="Postcode">                       
                                 </div>
                             </div>
                         </form>
@@ -77,17 +77,17 @@
                     <div class="buyer_work_address mt-[34px]">
                         <form action="#" class="flex flex-col gap-[14px]">
                             <div>
-                                <input type="text" class="address_line bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562]" placeholder="Address">
+                                <input type="text" class="address_line bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11" placeholder="Address">
                             </div>
                             <div>
-                                <select name="buyer_work_region" id="buyer_work_region" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562] custom-select2 style_3 before:content-['ddd']">
+                                <select name="buyer_work_region" id="buyer_work_region" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11 custom-select2 style_3 before:content-['ddd']">
                                     <option value="0">Region</option>
                                     <option value="1">Dhaka</option>
                                     <option value="2">Sylhet</option>
                                 </select>
                             </div>
                             <div>
-                                <select name="buyer_work_country" id="buyer_work_country" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562] custom-select2 style_3 before:content-['ddd']">
+                                <select name="buyer_work_country" id="buyer_work_country" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11 custom-select2 style_3 before:content-['ddd']">
                                     <option value="0">Country</option>
                                     <option value="1">Dhaka</option>
                                     <option value="2">Sylhet</option>
@@ -95,14 +95,14 @@
                             </div>
                             <div class="flex gap-[12px] flex-wrap">
                                 <div class="flex-[1_1_150px]">
-                                    <select name="buyer_work_city" id="buyer_work_city" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562] custom-select2 style_3 before:content-['ddd']">
+                                    <select name="buyer_work_city" id="buyer_work_city" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11 custom-select2 style_3 before:content-['ddd']">
                                         <option value="0">City</option>
                                         <option value="1">Dhaka</option>
                                         <option value="2">Sylhet</option>
                                     </select>
                                 </div>
                                 <div class="flex-[1_1_150px]">
-                                    <input type="text" class="buyer_work_postcode bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[#666562] placeholder:text-[#666562]" placeholder="Postcode">                       
+                                    <input type="text" class="buyer_work_postcode bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-color11 placeholder:text-color11" placeholder="Postcode">                       
                                 </div>
                             </div>
                         </form>
