--- a/product-details.html
+++ b/product-details.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="text-part-waper max-w-[412px] w-full mx-auto">
                     <div class="top-text-part">
-                        <ul class="bradecrumb flex gap-[10px] text-[10px] leading-[16px] text-[#666562] font-[300]">
+                        <ul class="bradecrumb flex gap-[10px] text-[10px] leading-[16px] text-color11 font-[300]">
                             <li>
                                 <a href="javascript:void(0)">Shop &nbsp; /</a>
                             </li>
@@ -172,7 +172,7 @@
                         </div>
                         <div class="color-wraper mt-[15px]">
                             <div class="title text-[#1F3650] font-[700] text-[12px] leading-[1px] tracking-[1px] uppercase">Color</div>
-                            <div class="color-name my-3 text-[#666562] font-[300] text-[12px] leading-[1.5] tracking-[1px]">Black — Organic Terry</div>
+                            <div class="color-name my-3 text-color11 font-[300] text-[12px] leading-[1.5] tracking-[1px]">Black — Organic Terry</div>
                             <div class="colors flex gap-[10px]">
                                 <input type="radio" name="color" id="color1" class="custom-radio-two bg-[#AF9484]">
                                 <input type="radio" name="color" id="color2" class="custom-radio-two bg-[#FBECCF]">
@@ -182,15 +182,15 @@
                         <div class="size_wraper mt-[15px]">
                             <div class="title text-[#1F3650] font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase">Size</div>
                             <div class="sizes flex gap-[12px]">
-                                <div class="text-[#666562] has-[:checked]:text-[#1F3650]">
+                                <div class="text-color11 has-[:checked]:text-[#1F3650]">
                                     <input type="radio" name="size" id="xs" class="hidden peer">
                                     <label for="xs" class="font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase border-b-[1px] border-[transparent] peer-checked:border-[#1F3650]">XS</label>
                                 </div>
-                                <div class="text-[#666562] has-[:checked]:text-[#1F3650]">
+                                <div class="text-color11 has-[:checked]:text-[#1F3650]">
                                     <input type="radio" name="size" id="s" class="hidden peer">
                                     <label for="s" class="font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase border-b-[1px] border-[transparent] peer-checked:border-[#1F3650]">S</label>
                                 </div>
-                                <div class="text-[#666562] has-[:checked]:text-[#1F3650]">
+                                <div class="text-color11 has-[:checked]:text-[#1F3650]">
                                     <input type="radio" name="size" id="M" class="hidden peer">
                                     <label for="M" class="font-[700] text-[12px] leading-[1.5] tracking-[1px] uppercase border-b-[1px] border-[transparent] peer-checked:border-[#1F3650]">M</label>
                                 </div>
