--- a/checkout-shipping-step.html
+++ b/checkout-shipping-step.html
@@ -20,16 +20,16 @@
                         <div class="bradecrumb">
                             <ul class="flex items-center flex justify-center gap-[9px]">
                                 <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Cart</a>
+                                    <a href="javascript:void(0)" class="text-[12px] text-color11 group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Cart</a>
                                 </li>
                                 <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Information</a>
+                                    <a href="javascript:void(0)" class="text-[12px] text-color11 group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Information</a>
                                 </li>
                                 <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Shipping</a>
+                                    <a href="javascript:void(0)" class="text-[12px] text-color11 group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Shipping</a>
                                 </li>
                                 <li class="group done">
-                                    <a href="javascript:void(0)" class="text-[12px] text-[#666562] group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Payment</a>
+                                    <a href="javascript:void(0)" class="text-[12px] text-color11 group-[.done]:text-[#1F3650] font-[700] after:content-['\f105'] after:font-[700] after:font-[FontAwesome] after:ml-[9px]">Payment</a>
                                 </li>
                             </ul>
                         </div>
@@ -37,7 +37,7 @@
                             <div class="shhiping_info_wraper border-[1px] border-[#CCCBC8] rounded-[5px] px-[16px] py-[12px] flex flex-col gap-[12px]">
                                 <div class="email flex justify-between">
                                     <div class="text_part flex">
-                                        <span class="text-[#666562] tracking-[1px] w-[70px]">Email</span>
+                                        <span class="text-color11 tracking-[1px] w-[70px]">Email</span>
                                         <span class="text-[#000000] tracking-[1px]">name@example.com</span>
                                     </div>
                                     <div class="change_btn">
@@ -47,7 +47,7 @@
                                 <div class="devider h-[1px] w-full bg-[#CCCBC8]"></div>
                                 <div class="referral flex justify-between">
                                     <div class="text_part flex">
-                                        <span class="text-[#666562] tracking-[1px] w-[70px]">Referral</span>
+                                        <span class="text-color11 tracking-[1px] w-[70px]">Referral</span>
                                         <span class="text-[#000000] tracking-[1px]">N/A</span>
                                     </div>
                                     <div class="change_btn">
@@ -57,7 +57,7 @@
                                 <div class="devider h-[1px] w-full bg-[#CCCBC8]"></div>
                                 <div class="ship_address flex justify-between">
                                     <div class="text_part flex">
-                                        <span class="text-[#666562] tracking-[1px] w-[70px]">Ship to</span>
+                                        <span class="text-color11 tracking-[1px] w-[70px]">Ship to</span>
                                         <span class="text-[#000000] tracking-[1px]">38 Chester Road London SW46 3TC</span>
                                     </div>
                                     <div class="change_btn">
@@ -71,27 +71,27 @@
                             <div class="shipping_method_wraper border-[1px] border-[#CCCBC8] rounded-[8px] bg-[#fff]">
                                 <div class="standerd_shipping flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
                                     <input type="radio" name="shipping_method" id="standerd_shipping" class="custom-radio">
-                                    <label for="standerd_shipping" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                    <label for="standerd_shipping" class="text-color11 cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
                                         <div>
                                             <div class="font-[700] text-[#020306] tracking-[-0.2px]">Standerd Shipping</div>
-                                            <div class="font-[300] text-[#666562] tracking-[-0.2px]">4 to 6 business days</div>
+                                            <div class="font-[300] text-color11 tracking-[-0.2px]">4 to 6 business days</div>
                                         </div>
                                         <div class="standerd_shipping_ammount text-[#1F3650] font-[700] tracking-[1px]">£10.00</div>
                                     </label>
                                 </div>
                                 <div class="express_delivery flex gap-[14px] p-[17px] border-b-[1px] border-[#CCCBC8]">
                                     <input type="radio" name="shipping_method" id="express_delivery" class="custom-radio">
-                                    <label for="express_delivery" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                    <label for="express_delivery" class="text-color11 cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
                                         <div>
                                             <div class="font-[700] text-[#020306] tracking-[-0.2px]">Express Delivery</div>
-                                            <div class="font-[300] text-[#666562] tracking-[-0.2px]">1 to 2 business days</div>
+                                            <div class="font-[300] text-color11 tracking-[-0.2px]">1 to 2 business days</div>
                                         </div>
                                         <div class="express_delivery_ammount text-[#1F3650] font-[700] tracking-[1px]">£15.00</div>
                                     </label>
                                 </div>
                                 <div class="same_day_delivery flex gap-[14px] p-[17px]">
                                     <input type="radio" name="shipping_method" id="same_day_delivery" class="custom-radio">
-                                    <label for="same_day_delivery" class="text-[#666562] cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
+                                    <label for="same_day_delivery" class="text-color11 cursor-pointer flex justify-between flex-1 items-center gap-[8px]">
                                         <div>
                                             <div class="font-[700] text-[#020306] tracking-[-0.2px]">Same Day Delivery</div>
                                         </div>
@@ -136,7 +136,7 @@
                         <div class="devider w-full h-[1px] bg-[#CCCBC8] my-[20px]"></div>
                         <div class="discount_part">
                             <div class="discount_code_wraper flex gap-[14px]">
-                                <input type="text" name="discount_code" id="discount_code" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] text-[#666562] placeholder:text-[#666562] mb-[14px]" placeholder="Discount Code">
+                                <input type="text" name="discount_code" id="discount_code" class="bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] text-color11 placeholder:text-color11 mb-[14px]" placeholder="Discount Code">
                                 <div class="apply_btn">
                                     <a href="javascript:void(0)" class="px-[17px] py-[8px] text-[14px] leading-[2] tracking-[1.5px] uppercase rounded-[5px] bg-[#2d2d2d80] text-[#FFFFFD]">Apply</a>
                                 </div>
@@ -157,22 +157,22 @@
                                         </svg>
                                     </div>
                                     <div class="font-[600] uppercase text-[#1F3650] text-[13px] leading-[1.5] tracking-[1.5px]">SPRINGSALE</div>
-                                    <div class="close text-[#666562] text-[1rem] leading-[1] cursor-pointer"><i class="fa-solid fa-xmark"></i></div>
+                                    <div class="close text-color11 text-[1rem] leading-[1] cursor-pointer"><i class="fa-solid fa-xmark"></i></div>
                                 </div>
                             </div>
                         </div>
                         <div class="devider w-full h-[1px] bg-[#CCCBC8] my-[20px]"></div>
                         <div class="all_calculation_part flex flex-col gap-[12px]">
                             <div class="subtotal flex justify-between gap-[10px] items-center">
-                                <div class="title text-[#666562] tracking-[1px]">Subtotal</div>
+                                <div class="title text-color11 tracking-[1px]">Subtotal</div>
                                 <div class="ammount text-[#1F3650] font-[700]">£100.00</div>
                             </div>
                             <div class="shipping flex justify-between gap-[10px] items-center">
-                                <div class="title text-[#666562] tracking-[1px]">Shipping</div>
-                                <div class="ammount text-[#666562]">Calculated at next step</div>
+                                <div class="title text-color11 tracking-[1px]">Shipping</div>
+                                <div class="ammount text-color11">Calculated at next step</div>
                             </div>
                             <div class="subtotal flex justify-between gap-[10px] items-center">
-                                <div class="title flex gap-[9px] text-[#666562] tracking-[1px]">
+                                <div class="title flex gap-[9px] text-color11 tracking-[1px]">
                                     <span>Discount</span>
                                     <div class="discount_copun flex gap-[9px] items-center">
                                         <div class="icon">
@@ -188,20 +188,20 @@
                                                 </defs>
                                             </svg>
                                         </div>
-                                        <div class="font-[600] uppercase text-[#666562] text-[12px] leading-[1.5] tracking-[1.5px]">SPRINGSALE</div>
+                                        <div class="font-[600] uppercase text-color11 text-[12px] leading-[1.5] tracking-[1.5px]">SPRINGSALE</div>
                                     </div>
                                 </div>
                                 <div class="ammount text-[#1F3650] font-[700]">£10.00</div>
                             </div>
                             <div class="taxes flex justify-between gap-[10px] items-center">
-                                <div class="title text-[#666562] tracking-[1px]">Taxes</div>
+                                <div class="title text-color11 tracking-[1px]">Taxes</div>
                                 <div class="ammount text-[#1F3650] font-[700]">£5.00</div>
                             </div>
                             <div class="devider w-full h-[1px] bg-[#CCCBC8] my-[9px]"></div>
                             <div class="total_calculation flex justify-between gap-[10px] items-center">
                                 <div class="total text-[#1F3650] text-[1.125rem] leading-[1.5] font-[700]">Total</div>
                                 <div class="total_ammount flex items-center gap-[10px]">
-                                    <span class="currency text-[#666562]">GBP</span>
+                                    <span class="currency text-color11">GBP</span>
                                     <span class="ammount text-[#1F3650] text-[1.6rem] leading-[1.6]">£95.00</span>
                                 </div>
                             </div>
